refactor: 按审查路线图拆分 BeastService 并清理 P3 积债
- P2: BeastService 拆分为 BeastBreedingService/BeastProductionService/BeastCombatService/BeastSkillService + BeastDisplayHelper
- P3: JsonbTypeHandler 解耦 CellConfig → CellConfigTypeHandler
- P3: UserBounty.rewards 改为 List<BountyRewardItem> + BountyRewardListTypeHandler
- P3: Skill.tags String→Set<String>, InventoryItem 移至 vo/
- P3: BreakthroughResult 去重, PillQuality 枚举替代字符串 switch
- P3: SpiritEmotionTools.addThought() 存入 xt_spirit_history
- P3: Beast 统一 @Accessors(chain=true), BeastRepository 支持分页/批量保存